Add service factory
