# docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/users/github": {
+        "/users/{source}": {
             "post": {
                 "description": "Get details of all provided github users",
                 "consumes": [
@@ -34,6 +34,13 @@
                         "schema": {
                             "$ref": "#/definitions/presentation.GetAccountDetailsRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Account source",
+                        "name": "source",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -88,7 +95,29 @@
                 },
                 "userDetails": {
                     "type": "array",
-                    "items": {}
+                    "items": {
+                        "$ref": "#/definitions/presentation.UserDetails"
+                    }
+                }
+            }
+        },
+        "presentation.UserDetails": {
+            "type": "object",
+            "properties": {
+                "company": {
+                    "type": "string"
+                },
+                "followers": {
+                    "type": "integer"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "publicRepos": {
+                    "type": "integer"
                 }
             }
         }
